<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="28dp"
    android:gravity="center"
    android:background="@drawable/bgmobile"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textSize="30sp"
        style="@style/title"/>
    <TextView
        android:id="@+id/homeSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_subtitle"
        android:textAlignment="center"
        android:textStyle="bold"
        style="@style/subTitle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"
        style="@style/yellowLoginButton"
        android:layout_marginTop="15dp"/>


</LinearLayout>